--- a/myVue/package.json
+++ b/myVue/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "element-ui": "^2.12.0",
     "font-awesome": "^4.7.0",
+    "mavon-editor": "^2.7.7",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
