--- a/myVue/package.json
+++ b/myVue/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "echarts": "^4.6.0",
     "element-ui": "^2.12.0",
     "font-awesome": "^4.7.0",
     "mavon-editor": "^2.7.7",
     "vue": "^2.5.2",
+    "vue-echarts": "^4.1.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
